# lumenlan

./: .gitignore  LICENSE  README.md
assets/: README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.svelte  app.css  main.ts
frontend/src/components/: ConnectModal.svelte  FileDrop.svelte  ImageDrop.svelte  MessageInput.svelte  MessageList.svelte  PinGate.svelte  StatusBar.svelte  Welcome.svelte
frontend/src/lib/: config.ts  files.ts  protocol.ts  session.svelte.ts  session.ts  ws.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: mdns_browse.rs
src-tauri/src/: auth.rs  config.rs  lib.rs  main.rs
src-tauri/src/discovery/: mod.rs
src-tauri/src/files/: mod.rs  receiver.rs
src-tauri/src/protocol/: message.rs  mod.rs
src-tauri/src/server/: hub.rs  mod.rs  router.rs  static_files.rs  ws.rs
